<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context="com.udacity.android.basics.justjava.MainActivity">

    <TextView
        style="@style/header"
        android:text="@string/textView_quantity_header" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/button.quantityPicker"
            android:onClick="decrement"
            android:text="@string/button_minus" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/value.Quantity"
            android:text="@string/textView_quantity_value" />

        <Button
            style="@style/button.quantityPicker"
            android:onClick="increment"
            android:text="@string/button_plus" />

    </LinearLayout>

    <TextView
        style="@style/header"
        android:text="@string/textView_price_header" />

    <TextView
        android:id="@+id/price_text_view"
        style="@style/value"
        android:text="@string/textView_price_value" />

    <Button
        style="@style/button"
        android:onClick="submitOrder"
        android:text="@string/button_order" />

</LinearLayout>

